# alpa

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
resources/: config.lua
src/: app.rs  command.rs  config.rs  host.rs  keycode.rs  llama.rs  main.rs  prelude.lua  search.rs  util.rs  window.rs
