[package]
authors = ["Philpax"]
description = "An Alpaca-powered knowledge tool"
edition = "2021"
license = "MIT"
name = "alpa"
version = "0.4.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.0"
mlua = {version = "0.8.2", features = ["luau", "serialize"]}
serde = {version = "1.0", features = ["derive"]}

eframe = "0.21.3"
egui = "0.21.0"

anyhow = "1.0.58"
device_query = "1.1.1"

arboard = "3.2.0"

llama-rs = {git = "https://github.com/setzer22/llama-rs.git"}
rand = "0.8.5"
