[package]
authors = ["Philpax"]
description = "An Alpaca-powered knowledge tool"
edition = "2021"
license = "MIT"
name = "alpa"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.0"
mlua = {version = "0.8.8", features = ["lua54", "vendored", "serialize"]}
serde = { version = "1.0", features = ["derive"] }

egui = "0.21.0"
epi = "0.17.0"
egui_winit_platform = "0.18.0"
egui_wgpu_backend = "0.22.0"
wgpu = "0.15.1"
winit = "0.28.3"

anyhow = "1.0.58"
device_query = "1.1.1"

arboard = "3.2.0"
enigo = "0.1.2"

rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.95"

llm = "0.1.0-rc3"